Optimization: ensure most optimal route sequencing starting from drivers current location